# chart-plotting

./: .gitignore  BaseballChartExplainer.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  requirements_data.txt
.github/workflows/: docker-build-push.yml  plot_batter_wrc.yml  plot_fantasy_free_agents.yml  plot_mlb_graphical_standings.yml  plot_pitcher_war.yml  plot_rolling_run_diff.yml  plot_run_diff_scatter.yml  plot_team_gsax.yml  runner-test.yml  scrape_and_plot_game_reports.yml  scrape_and_plot_playoff_g_xg.yml  scrape_and_plot_skater_points.yml  scrape_and_plot_skater_tables.yml  scrape_and_plot_special_teams_tables.yml  scrape_and_plot_team_tables.yml  scrape_and_plot_team_xg_rolling_avg.yml  update_dashboard_data.yml
baseball/player_plots/: plot_pitcher_war_distribution.py  plot_wrc_distribution.py
dashboard/: fantasy_fa.py
plot_types/: animated_rolling_average.py  cumulative_lines.py  layered_lollipop.py  mirrored_bar.py  multiplot.py  pie.py  plot.py  ratio_scatter.py  rolling_average.py  scoreboard.py  sequential_bar.py  swarm.py  table.py
plotting/: mirrored_bar_plot.py  multiplot.py  plot.py  rolling_average_plot.py  stacked_bar_plot.py
plotting/base_plots/: mirrored_bar.py  (+13 more)
processing/: process_team_tables.py  processing_util.py
shell_scripts/: plot_fantasy_FAs.sh
tests/: test_mlb_wrc_plot.py  test_nhl_game_reports.py  test_nhl_gsax_plot.py  test_nhl_ratio_scatter_plots.py  test_nhl_scoring_scatter_plot.py
util/: color_maps.py  fix_traded_mlb_players.py  font_dicts.py  get_detailed_batter_stats.py  helpers.py  team_maps.py
(+48 files in other folders)
